# homm3-mapviz

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  build.sh  run.sh
.github/workflows/: windows.yml
docs/: vcmiwallpaper.md
src/: CMakeLists.txt  EntryPoint.cpp  StdInc.h  WallpaperRendererContext.cpp  WallpaperRendererContext.h
